# squan-desktop-tauri

./: .gitignore  README.md  V2.0.3_FEATURES_ADDED.md  V2.1.0_COMPLETE_FEATURES.md  build-v2.0.2.bat  build.bat  create-icons.ps1  package.json
.github/workflows/: build.yml
src/: index-dark.html  index-old-2.0.4.html  index-old-2.html  index-old.html  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  standalone.rs  standalone_old.rs
